kyverno-policies/test-env/opera-cluster/privileged/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name:  bad-pod
spec:
  hostNetwork: false
  hostPID: false
  hostIPC: false
  securityContext:
    runAsUser: 1000
    fsGroup: 1001
    supplementalGroups: [2002]
  volumes:
  - name: config-vol
    hostPath:
      path: /dev/test
      type: DirectoryOrCreate
  containers:
  - name: container01
    image: busybox
    command:
      - sleep
      - "3600"
    volumeMounts:
    - name: config-vol
      mountPath: /etc/config
    securityContext:
      allowPrivilegeEscalation: false
      privileged: false
      seLinuxOptions:
        level: "s0:c123,c456"
